--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.3.2",
+    "tailwindcss": "^1.1.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
@@ -52,11 +53,6 @@
         }
       }
     ]
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
   },
   "browserslist": [
     "> 1%",
